--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.11",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript-prettier": "^2.1.1",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "mobx": "^5.15.4",
+    "mobx-state-tree": "^3.16.0"
   }
 }
