--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.155",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "eslint": "^6.8.0",
@@ -29,7 +30,9 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@spcy/lib.core.reflection": "^1.0.0",
     "mobx": "^5.15.4",
-    "mobx-state-tree": "^3.16.0"
+    "mobx-state-tree": "^3.16.0",
+    "lodash": "^4.17.15"
   }
 }
