--- a/package.json
+++ b/package.json
@@ -13,26 +13,28 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "spcy:build": "tsc",
+    "spcy:clean": "shx rm -rf dist && shx rm -rf lib",
+    "spcy:build": "yarn spcy:clean && tsc",
     "spcy:format": "prettier --write \"{src,__tests__}/**/*.{js,ts}\"",
     "spcy:lint": "eslint \"src/**/*.{js,ts}\"",
     "spcy:test": "jest"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.155",
     "@types/jest": "^26.0.0",
+    "@types/lodash": "^4.14.155",
     "@types/node": "^14.0.13",
     "eslint": "^6.8.0",
-    "prettier": "^1.18.2",
     "eslint-config-airbnb-typescript-prettier": "^2.1.1",
     "jest": "^26.0.1",
+    "prettier": "^1.18.2",
     "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "shx": "^0.3.2"
   },
   "dependencies": {
     "@spcy/lib.core.reflection": "^1.0.0",
     "@spcy/pub.mobx-state-tree": "^3.16.0",
-    "mobx": "^5.15.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mobx": "^5.15.4"
   }
 }
