--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "private": true,
   "scripts": {
     "spcy:clean": "shx rm -rf dist && shx rm -rf lib",
-    "spcy:build": "yarn spcy:clean && tsc",
+    "spcy:meta": "yarn tsr --includes='__tests__/**/*.ts' && yarn spcy:format",
+    "spcy:build": "yarn spcy:clean && yarn spcy:meta && tsc",
     "spcy:format": "prettier --write \"{src,__tests__}/**/*.{js,ts}\"",
     "spcy:lint": "eslint \"src/**/*.{js,ts}\"",
     "spcy:test": "jest"
@@ -29,7 +30,8 @@
     "prettier": "^1.18.2",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5",
-    "shx": "^0.3.2"
+    "shx": "^0.3.2",
+    "@spcy/lib.core.typescript-reflection": "^1.0.0"
   },
   "dependencies": {
     "@spcy/lib.core.reflection": "^1.0.0",
