--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
+    "@types/jest-specific-snapshot": "^0.5.4",
     "@types/lodash": "^4.14.155",
     "@types/node": "^14.0.13",
     "typescript": "3.9.5",
@@ -29,6 +30,7 @@
     "prettier": "^2.0.5",
     "eslint-config-airbnb-typescript-prettier": "^2.2.0",
     "jest": "^26.0.1",
+    "jest-specific-snapshot": "^3.0.0",
     "ts-jest": "^26.1.0",
     "shx": "^0.3.2",
     "@spcy/lib.core.typescript-reflection": "^1.0.0"
