--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jest-specific-snapshot": "^3.0.0",
     "ts-jest": "^26.1.0",
     "shx": "^0.3.2",
-    "@spcy/lib.dev.typescript-reflection": "^1.0.0"
+    "@spcy/lib.dev.typescript-reflection": "^1.0.0",
+    "@spcy/lib.dev.tasty": "^1.0.0"
   },
   "dependencies": {
     "@spcy/lib.core.reflection": "^1.0.0",
