--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "spcy:test": "jest"
   },
   "devDependencies": {
+    "@spcy/lib.dev.typescript-reflection": "^1.0.0",
+    "@spcy/lib.dev.tasty": "^1.0.0",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.155",
     "@types/node": "^14.0.13",
@@ -30,9 +32,7 @@
     "eslint-config-airbnb-typescript-prettier": "^2.2.0",
     "jest": "^26.0.1",
     "ts-jest": "^26.1.0",
-    "shx": "^0.3.2",
-    "@spcy/lib.dev.typescript-reflection": "^1.0.0",
-    "@spcy/lib.dev.tasty": "^1.0.0"
+    "shx": "^0.3.2"
   },
   "dependencies": {
     "@spcy/lib.core.reflection": "^1.0.0",
