--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "@spcy/lib.core.reflection": "^1.0.0",
     "@spcy/pub.mobx-state-tree": "^3.16.0",
-    "lodash": "^4.17.15",
-    "mobx": "^5.15.4"
+    "mobx": "^5.15.4",
+    "lodash": "^4.17.15"
   }
 }
